public/css: CSS changes for isso and index Fix isso comment wrap arround bug on firefox Allow front page recents to be centered correctly

--- a/public/css/isso-tdro.css
+++ b/public/css/isso-tdro.css
@@ -2,6 +2,11 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    word-wrap: break-word;
+}
+
+#isso-thread .avatar > svg[data-hash="4415d0b80795"] {
+    border: 3px solid #f19670;
 }
 
 #isso-thread .isso-comment-header a {
